[package]
name = "clashprobe"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
base64 = "0.22"
url = "2.0"
urlencoding = "2.1"
serde_json = "1.0"
futures = "0.3"
clash-lib = { path = "clash-rs/clash-lib", features = ["shadowsocks", "zero_copy", "aws-lc-rs"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.9.5"
influxdb2 = "0.5.2"
bitflags = { version = "2.9.4", features = ["serde"] }
async-trait = "0.1.89"
frankenstein = { version = "0.44.0", features = ["client-reqwest"] }
